--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@ align: center;
 
 	function rozwijaj1()
 	{
-	document.getElementById("p1").innerHTML = "Szansa opadów: 24%, Wilgotność: 89%, Wiatr: 14km/h."
+	document.getElementById("p1").innerHTML = "Chance of precipitation: 24%, Humidity: 89%, Wind: 14km/h."
 	}
 	function rozwijaj2()
 	{
-	document.getElementById("p2").innerHTML = "Szansa opadów: 14%, Wilgotność: 85%, Wiatr: 24km/h."
+	document.getElementById("p2").innerHTML = "Chance of precipitation: 14%, Humidity: 85%, Wind: 24km/h."
 	}
 	function rozwijaj3()
 	{
-	document.getElementById("p3").innerHTML = "Szansa opadów: 15%, Wilgotność: 91%, Wiatr: 16km/h."
+	document.getElementById("p3").innerHTML = "Chance of precipitation: 15%, Humidity: 91%, Wind: 16km/h."
 	}
 
 </script>
 </head>
 <body>
 </p>
-<h1>Rzeszów</h1>
-<p id="p2">-6 ^C<button onclick="rozwijaj2()">Wincyj</button></p>
-<h1>Warszawa</h1>
-<p id="p1">-4 ^C<button onclick="rozwijaj1()">Wincyj</button> </p>
-<h1>Lwów</h1>
-<p id="p3">-6 ^C<button onclick="rozwijaj3()">Wincyj</button></p>
+<h1>Rzeszow</h1>
+<p id="p2">-6 ^C<button onclick="rozwijaj2()">More</button></p>
+<h1>Warsaw</h1>
+<p id="p1">-4 ^C<button onclick="rozwijaj1()">More</button> </p>
+<h1>Lviv</h1>
+<p id="p3">-6 ^C<button onclick="rozwijaj3()">More</button></p>
 
 </body>
 </html>
