--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
 
 <html>
 
 <head>
-<title> Mój blog </title>
+<title>Weather</title>
 <meta charset="UTF-8">
 
 
